ALS-1636: Remove 03272020 from file names

--- a/ui/httpd-vhosts.conf
+++ b/ui/httpd-vhosts.conf
@@ -56,7 +56,7 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
 
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
-    RewriteRule /psamaui/(.*) /psamaui/index.html
+    RewriteRule /psamaui/(.*) /picsureui/index.html
 
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
