--- a/ui/httpd-vhosts.conf
+++ b/ui/httpd-vhosts.conf
@@ -54,6 +54,11 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
     SSLCertificateChainFile "${HTTPD_PREFIX}/cert/server.chain"
 
     Header always set Strict-Transport-Security "max-age=31536000; includeSubdomains; preload"
+
+    # Set the Content-Security-Policy header to only allow resources from the same origin
+    # This is to protect against XSS attacks & clickjacking
+    Header always set Content-Security-Policy "frame-ancestors 'none';"
+    Header always set X-Frame-Options "DENY"
     
     RewriteEngine On
     ProxyPreserveHost On
