--- a/selenium-tests/src/test/resources/log4j.properties
+++ b/selenium-tests/src/test/resources/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=BDCpicsureui.log
+log4j.appender.file.File=Picsureui.log
 # Set the immediate flush to true (default)
 log4j.appender.FILE.ImmediateFlush=true
 # Set the append to false, overwrite
