updated testConfigs for correct data

--- a/selenium-tests/resources/testConfigs/picsureuiall.yaml.bynumericvalue.between.validation.message.template
+++ b/selenium-tests/resources/testConfigs/picsureuiall.yaml.bynumericvalue.between.validation.message.template
@@ -1,4 +1,4 @@
- name: This setup the environment for running the automation test scripts
+ name: This test case verifies the validation message for in between text fields
  reporter: ConsoleReporter
  SearchTerm: Vitamin
  TextToSelect: Vitamin E
