--- a/selenium-tests/resources/testConfigs/picsureui.yaml.verifysuccessful.login.template
+++ b/selenium-tests/resources/testConfigs/picsureui.yaml.verifysuccessful.login.template
@@ -1,6 +1,6 @@
  name: This test verify that user successfully logged in PICSURE UI..
  #Please update the browser name accordingly e.g. chrome,chromeheadless,firefox or firefoxheadless etc..
- browser: chrome
+ browser: firefox
  url: https://preprod.picsure.biodatacatalyst.nhlbi.nih.gov/
  authmethod: ERACOMMON
  username: atul.sanagar@gmail.com
