--- a/selenium-tests/resources/testConfigs/picsureuiall.yaml.bynumericvalue.neagativetestcase.outofrange.template
+++ b/selenium-tests/resources/testConfigs/picsureuiall.yaml.bynumericvalue.neagativetestcase.outofrange.template
@@ -1,18 +1,6 @@
  name: This test case verify validation around by numeric fields
- #Please update the browser name accordingly e.g. chrome,chromeheadless,firefox or firefoxheadless etc..
- browser: chrome
- url: http://34.202.235.238/
- #authmethod: ADMINLOGIN
- username: admin
- password: admin
- test: regression
- type: QueryBuilderTestPlan
+ url: https://preprod.picsure.biodatacatalyst.nhlbi.nih.gov/
  reporter: ConsoleReporter
- subset1: \demographics\SEX\female
- subset2:
- success: patientcountsubset1
- successvalue: 21210
- expected: pass
  SearchTerm: Vitamin E
  TextToSelect: Vitamin E
  PatientCount: 2150
