--- a/selenium-tests/resources/testConfigs/picsureuiall.yaml.bynumericvalue.novaluemessage.template
+++ b/selenium-tests/resources/testConfigs/picsureuiall.yaml.bynumericvalue.novaluemessage.template
@@ -1,13 +1,5 @@
  name: This test case verifies the message if user is trying to submit the query with empty input textbox 
- #Please update the browser name accordingly e.g. chrome,chromeheadless,firefox or firefoxheadless etc..
- url: http://ec2-3-95-201-89.compute-1.amazonaws.com/
- test: regression
- type: QueryBuilderTestPlan
+ url: https://nhanes-dev.hms.harvard.edu/psamaui/login
  reporter: ConsoleReporter
- subset1: \demographics\SEX\female
- subset2:
- success: patientcountsubset1
- successvalue: 21210
- expected: pass
- SearchTerm: Vitamin
+ SearchTerm: Vitamin D
  TextToSelect: Vitamin D
