mapping for testConfig folder

--- a/selenium-tests/src/test/resources/Config.properties
+++ b/selenium-tests/src/test/resources/Config.properties
@@ -1,40 +1,29 @@
-intial.setup.picsureuiall=resources/testConfigsPreProd/projects.yaml.settingup.envrionment.picsureuiall.template
-verify.loadingofpicsureui=resources/testConfigsPreProd/picsureuiall.yaml.loadpicsureui.template
-verify.authorization.ofpicsureui=resources/testConfigsPreProd/picsureui.yaml.verifysuccessful.login.template
-verify.queryresult.invaliddata=resources/testConfigsPreProd/projects.yaml.invaliddata.picsureuiall.template
-verify.queryresult.novalue=resources/testConfigsPreProd/picsureuiall.yaml.novalue.template
-verify.queryresult.bynumeric.lessthan=resources/testConfigsPreProd/picsureuiall.yaml.bynumericvalue.lessthan.template
-verify.queryresult.bynumeric.greaterthan=resources/testConfigsPreProd/picsureuiall.yaml.bynumericvalue.greaterthan.template
-verify.queryresult.bynumeric.inbetween=resources/testConfigsPreProd/picsureuiall.yaml.bynumericvalue.between.template
-verify.queryresult.bynumeric.decimalvalue=resources/testConfigsPreProd/picsureuiall.yaml.bynumericvalue.decimalvalue.template
-#verify.queryresult.bynumeric.noinputvalue.message=resources/testConfigsPreProd/picsureuiall.yaml.bynumericvalue.novaluemessage.template
-verify.queryresult.bynumeric.noinputvalue.message=resources/testConfigsPreProd/picsureuiall.yaml.bynumericvalue.emptyvaluemessage.template
-verify.queryresult.bynumeric.between.validation.message=resources/testConfigsPreProd/picsureuiall.yaml.bynumericvalue.between.validation.message.template
-verify.queryresult.caseinsensitive=resources/testConfigsPreProd/picsureuiall.yaml.caseinsensitive.template
-verify.queryresult.deletion=resources/testConfigsPreProd/picsureuiall.yaml.deleting.template
-verify.queryresult.editing=resources/testConfigsPreProd/picsureuiall.yaml.editing.template
-verify.backbutton.functionality=resources/testConfigsPreProd/picsureuiall.yaml.backbutton.template
-verify.queryresult.novalue.search=resources/testConfigsPreProd/picsureuiall.yaml.quickstart.verifyautosuggestion.template
-verify.queryresultandcondition=resources/testConfigsPreProd/picsureuiall.yaml.queryresult.andcondition.template
-verify.queryresult.downloading.data=resources/testConfigsPreProd/picsureuiall.yaml.downloadofdata.template
-verify.queryresult.verify.downloadeddata=resources/testConfigsPreProdPICSURE/picsureuiall.yaml.downloadofdata.template
-verify.presenceof.andlabel=resources/testConfigsPreProd/picsureuiall.yaml.queryresult.andlabel.template
-verify.backbutton.functionality=resources/testConfigsPreProd/picsureuiall.yaml.backbutton.template
-verify.queryresult.verify.multiple.concepts.downloadeddata=resources/testConfigsPreProd/picsureuiall.verifydata.multiple.and.coceptterm.template
-verify.window.title=resources/testConfigsPreProdPICSURE/projects.yaml.onlysubset1.template
-verify.validation.outofrange=resources/testConfigsPreProd/picsureuiall.yaml.bynumericvalue.neagativetestcase.outofrange.template
-verify.queryresult.racebyvalue=resources/testConfigsPreProd/picsureuiall.yaml.restrictbyvalue.template
-verify.queryresult.userprofile=resources/testConfigsPreProd/picsureuiall.yaml.userprofile.template
-verify.datareportbdccolumn=resources/testConfigsPreProd/picsureuiall.yaml.bdcuautocolumn.template
-verify.queryresult.dataaccess=resources/testConfigsPreProd/picsureuiall.yaml.dataaccess.template
-verify.queryresult.helpcontactus=resources/testConfigsPreProd/picsureuiall.yaml.helpcontactus.template
-verify.logout.picsure=resources/testConfigsPreProd/picsureuiall.yaml.logout.template
-verify.queryresult.dataaccess.explore=resources/testConfigsPreProd/picsureuiall.yaml.dataaccess.explore.template
-verify.bdc.authorizedaccess.dataexport=resources/testConfigsPreProd/picsureuiall.yaml.authorizedaccess.template
-verify.bdc.authorizedaccess.pageload=resources/testConfigsPreProd/picsureuiall.yaml.authorizedaccess.pageload.template
-verify.bdc.authorizedaccess.pageload.noexportbutton=resources/testConfigsPreProd/picsureuiall.yaml.authorizedaccess.pageload.noexport.template
-verify.bdc.queryscope.study.openaccess=resources/testConfigsPreProd/picsureuiall.yaml.queryscope.openaccess.template
-verify.bdc.queryresult.nearmaxvalue=resources/testConfigsPreProd/picsureuiall.yaml.bynumericvalue.maxvalue.template
-verify.bdc.openaccess.patientcountlessthan.tenfeature=resources/testConfigsPreProd/picsureuiall.openaccess.patientcountlessthantenfeature.template
-verify.bdc.granted.functionality.openaccess=resources/testConfigsPreProd/picsureuiall.granted.button.openaccess.template
-verify.bdc.subject.hoverover.tooltip=resources/testConfigsPreProd/picsureuiall.hoverover.subject.tooltip.template
+intial.setup.picsureuiall=resources/testConfigs/projects.yaml.settingup.envrionment.picsureuiall.template
+verify.loadingofpicsureui=resources/testConfigs/picsureuiall.yaml.loadpicsureui.template
+verify.authorization.ofpicsureui=resources/testConfigs/picsureui.yaml.verifysuccessful.login.template
+verify.queryresult.invaliddata=resources/testConfigs/projects.yaml.invaliddata.picsureuiall.template
+verify.queryresult.novalue=resources/testConfigs/picsureuiall.yaml.novalue.template
+verify.queryresult.bynumeric.lessthan=resources/testConfigs/picsureuiall.yaml.bynumericvalue.lessthan.template
+verify.queryresult.bynumeric.greaterthan=resources/testConfigs/picsureuiall.yaml.bynumericvalue.greaterthan.template
+verify.queryresult.bynumeric.inbetween=resources/testConfigs/picsureuiall.yaml.bynumericvalue.between.template
+verify.queryresult.bynumeric.decimalvalue=resources/testConfigs/picsureuiall.yaml.bynumericvalue.decimalvalue.template
+verify.queryresult.bynumeric.noinputvalue.message=resources/testConfigs/picsureuiall.yaml.bynumericvalue.novaluemessage.template
+#verify.queryresult.bynumeric.noinputvalue.message=resources/testConfigs/picsureuiall.yaml.bynumericvalue.emptyvaluemessage.template
+verify.queryresult.bynumeric.between.validation.message=resources/testConfigs/picsureuiall.yaml.bynumericvalue.between.validation.message.template
+verify.queryresult.caseinsensitive=resources/testConfigs/picsureuiall.yaml.caseinsensitive.template
+verify.queryresult.deletion=resources/testConfigs/picsureuiall.yaml.deleting.template
+verify.queryresult.editing=resources/testConfigs/picsureuiall.yaml.editing.template
+verify.backbutton.functionality=resources/testConfigs/picsureuiall.yaml.backbutton.template
+verify.queryresult.novalue.search=resources/testConfigs/picsureuiall.yaml.quickstart.verifyautosuggestion.template
+verify.queryresultandcondition=resources/testConfigs/picsureuiall.yaml.queryresult.andcondition.template
+verify.queryresult.downloading.data=resources/testConfigs/picsureuiall.yaml.downloadofdata.template
+verify.queryresult.verify.downloadeddata=resources/testConfigsPICSURE/picsureuiall.yaml.downloadofdata.template
+verify.presenceof.andlabel=resources/testConfigs/picsureuiall.yaml.queryresult.andlabel.template
+verify.backbutton.functionality=resources/testConfigs/picsureuiall.yaml.backbutton.template
+verify.queryresult.verify.multiple.concepts.downloadeddata=resources/testConfigs/picsureuiall.verifydata.multiple.and.coceptterm.template
+verify.window.title=resources/testConfigsPICSURE/projects.yaml.onlysubset1.template
+verify.validation.outofrange=resources/testConfigs/picsureuiall.yaml.bynumericvalue.neagativetestcase.outofrange.template
+verify.queryresult.racebyvalue=resources/testConfigs/picsureuiall.yaml.restrictbyvalue.template
+verify.queryresult.userprofile=resources/testConfigs/picsureuiall.yaml.userprofile.template
+verify.queryresult.helpcontactus=resources/testConfigs/picsureuiall.yaml.helpcontactus.template
+verify.logout.picsure=resources/testConfigs/picsureuiall.yaml.logout.template
