--- a/ui/httpd-vhosts.conf
+++ b/ui/httpd-vhosts.conf
@@ -57,6 +57,15 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
 
     Header always set Content-Security-Policy "frame-ancestors 'none';"
     Header always set X-Frame-Options "DENY"
+
+    <Location ~ "/picsure/openapi.(json|yaml)">
+        Header always set Access-Control-Allow-Origin "*"
+        Header always set Access-Control-Allow-Methods "GET"
+        Header always set Access-Control-Allow-Headers "Content-Type"
+        Header always set Access-Control-Allow-Credentials "false"
+        Header always set Access-Control-Max-Age "3600"
+    </Location>
+
     
     RewriteEngine On
     ProxyPreserveHost On
