--- a/ui/httpd-vhosts.conf
+++ b/ui/httpd-vhosts.conf
@@ -19,8 +19,8 @@ SSLProxyCipherSuite HIGH:!MD5:!RC4:!3DES
 
 SSLHonorCipherOrder on
 
-SSLProtocol all -SSLv2 -SSLv3 -TLSv1 -TLSv1.1
-SSLProxyProtocol all -SSLv2 -SSLv3 -TLSv1 -TLSv1.1
+SSLProtocol all -SSLv2 -SSLv3
+SSLProxyProtocol all -SSLv2 -SSLv3
 SSLPassPhraseDialog  builtin
 
 SSLSessionCache        "shmcb:${HTTPD_PREFIX}/logs/ssl_scache(512000)"
