Revert "Remove virtual host configuration files (#13)"
This reverts commit 2dc409a4473371995833408bbbaf051a95ae8553.

--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,6 +1,9 @@
 FROM hms-dbmi/pic-sure-hpds-ui:TARGET_BUILD_VERSION AS pic-sure-ui
 FROM httpd:2.4.53-alpine
 
+# Replace virtual host config file with ours
+COPY httpd-vhosts.conf ${HTTPD_PREFIX}/conf/extra/httpd-vhosts.conf
+
 # Enable virtual hosting config file
 RUN sed -i '/^#Include conf.extra.httpd-vhosts.conf/s/^#//' ${HTTPD_PREFIX}/conf/httpd.conf
 
